Refine bike speed and cadence views UI.

--- a/AntPlusMauiClient/Views/BikeCadenceView.xaml
+++ b/AntPlusMauiClient/Views/BikeCadenceView.xaml
@@ -4,10 +4,10 @@
              xmlns:vm="clr-namespace:AntPlusMauiClient.ViewModels"
              x:DataType="vm:BikeCadenceViewModel"
              x:Class="AntPlusMauiClient.Views.BikeCadenceView">
-    <VerticalStackLayout>
+    <StackLayout>
         <Border>
             <StackLayout>
-                <Label Text="Cadence Sensor" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Cadence Sensor" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeCadenceSensor.InstantaneousCadence, StringFormat='Instantaneous Cadence: {0:F3}'}"/>
                 <Label Text="{Binding BikeCadenceSensor.CumulativeOperatingTime, StringFormat='Operating Time: {0}'}"/>
                 <Label Text="{Binding BikeCadenceSensor.Stopped, StringFormat='Stopped: {0}'}"/>
@@ -15,14 +15,14 @@
         </Border>
         <Border>
             <StackLayout>
-                <Label Text="Manufacturer Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Manufacturer Info" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeCadenceSensor.ManufacturerInfo.ManufacturingId, StringFormat='Manufacturer Id: {0}'}"/>
                 <Label Text="{Binding BikeCadenceSensor.ManufacturerInfo.SerialNumber, StringFormat='Serial Number: {0}'}"/>
             </StackLayout>
         </Border>
         <Border>
             <StackLayout>
-                <Label Text="Product Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Product Info" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeCadenceSensor.ProductInfo.HardwareVersion, StringFormat='Hardware Version: {0}'}"/>
                 <Label Text="{Binding BikeCadenceSensor.ProductInfo.ModelNumber, StringFormat='Model #: {0}'}"/>
                 <Label Text="{Binding BikeCadenceSensor.ProductInfo.SoftwareVersion, StringFormat='Software Version: {0}'}"/>
@@ -30,10 +30,10 @@
         </Border>
         <Border>
             <StackLayout>
-                <Label Text="Battery Status" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Battery Status" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeCadenceSensor.BatteryStatus.BatteryStatus, StringFormat='Status: {0}'}"/>
                 <Label Text="{Binding BikeCadenceSensor.BatteryStatus.BatteryVoltage, StringFormat='Voltage: {0}'}"/>
             </StackLayout>
         </Border>
-    </VerticalStackLayout>
+    </StackLayout>
 </ContentView>
