--- a/AntPlusMauiClient/Views/BikeSpeedAndCadenceView.xaml
+++ b/AntPlusMauiClient/Views/BikeSpeedAndCadenceView.xaml
@@ -4,12 +4,14 @@
              xmlns:vm="clr-namespace:AntPlusMauiClient.ViewModels"
              x:DataType="vm:BikeSpeedAndCadenceViewModel"
              x:Class="AntPlusMauiClient.Views.BikeSpeedAndCadenceView">
-    <Border>
-        <StackLayout>
-            <Label Text="Sensor Data" FontAttributes="Bold" TextDecorations="Underline"/>
-            <Label Text="{Binding CombinedSpeedAndCadenceSensor.InstantaneousCadence, StringFormat='Instantaneous Cadence: {0:F3}'}"/>
-            <Label Text="{Binding CombinedSpeedAndCadenceSensor.InstantaneousSpeed, StringFormat='Instantaneous Speed: {0:F3}'}"/>
-            <Label Text="{Binding CombinedSpeedAndCadenceSensor.AccumulatedDistance, StringFormat='Accumulated Distance: {0:F3}'}"/>
-        </StackLayout>
-    </Border>
+    <StackLayout>
+        <Border>
+            <StackLayout>
+                <Label Text="Sensor Data" Style="{StaticResource HeaderLabelStyle}"/>
+                <Label Text="{Binding CombinedSpeedAndCadenceSensor.InstantaneousCadence, StringFormat='Instantaneous Cadence: {0:F3}'}"/>
+                <Label Text="{Binding CombinedSpeedAndCadenceSensor.InstantaneousSpeed, StringFormat='Instantaneous Speed: {0:F3}'}"/>
+                <Label Text="{Binding CombinedSpeedAndCadenceSensor.AccumulatedDistance, StringFormat='Accumulated Distance: {0:F3}'}"/>
+            </StackLayout>
+        </Border>
+    </StackLayout>
 </ContentView>
