--- a/AntPlusMauiClient/Views/BikeSpeedView.xaml
+++ b/AntPlusMauiClient/Views/BikeSpeedView.xaml
@@ -7,7 +7,7 @@
     <StackLayout>
         <Border>
             <StackLayout>
-                <Label Text="Speed and Distance" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Speed and Distance" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeSpeedSensor.InstantaneousSpeed, StringFormat='Instantaneous Speed: {0:F3}'}"/>
                 <Label Text="{Binding BikeSpeedSensor.AccumulatedDistance, StringFormat='Accumulated Distance: {0:F3}'}"/>
                 <Label Text="{Binding BikeSpeedSensor.CumulativeOperatingTime, StringFormat='Operating Time: {0}'}"/>
@@ -16,14 +16,14 @@
         </Border>
         <Border>
             <StackLayout>
-                <Label Text="Manufacturer Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Manufacturer Info" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeSpeedSensor.ManufacturerInfo.ManufacturingId, StringFormat='Manufacturer Id: {0}'}"/>
                 <Label Text="{Binding BikeSpeedSensor.ManufacturerInfo.SerialNumber, StringFormat='Serial Number: {0}'}"/>
             </StackLayout>
         </Border>
         <Border>
             <StackLayout>
-                <Label Text="Product Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Product Info" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeSpeedSensor.ProductInfo.HardwareVersion, StringFormat='Hardware Version: {0}'}"/>
                 <Label Text="{Binding BikeSpeedSensor.ProductInfo.ModelNumber, StringFormat='Model #: {0}'}"/>
                 <Label Text="{Binding BikeSpeedSensor.ProductInfo.SoftwareVersion, StringFormat='Software Version: {0}'}"/>
@@ -31,7 +31,7 @@
         </Border>
         <Border>
             <StackLayout>
-                <Label Text="Battery Status" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="Battery Status" Style="{StaticResource HeaderLabelStyle}"/>
                 <Label Text="{Binding BikeSpeedSensor.BatteryStatus.BatteryStatus, StringFormat='Status: {0}'}"/>
                 <Label Text="{Binding BikeSpeedSensor.BatteryStatus.BatteryVoltage, StringFormat='Voltage: {0}'}"/>
             </StackLayout>
