--- a/AntPlusMauiClient/Views/HeartRateView.xaml
+++ b/AntPlusMauiClient/Views/HeartRateView.xaml
@@ -14,7 +14,7 @@
                     <StackLayout>
                         <Border>
                             <StackLayout>
-                                <Label Text="Heart Rate" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="Heart Rate" Style="{StaticResource HeaderLabelStyle}"/>
                                 <Label Text="{Binding HeartRate.HeartRateData.ComputedHeartRate, StringFormat='Heart Rate: {0}'}"/>
                                 <Label Text="{Binding HeartRate.HeartRateData.RRInterval, StringFormat='RR Interval: {0}'}"/>
                                 <Label Text="{Binding HeartRate.HeartRateData.AccumulatedHeartBeatEventTime, StringFormat='Accumulated Heartbeat Event Time: {0}'}"/>
@@ -24,14 +24,14 @@
                         </Border>
                         <Border>
                             <StackLayout>
-                                <Label Text="Manufacturer Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="Manufacturer Info" Style="{StaticResource HeaderLabelStyle}"/>
                                 <Label Text="{Binding HeartRate.ManufacturerInfo.ManufacturingIdLsb, StringFormat='Man ID LSB: {0}'}"/>
                                 <Label Text="{Binding HeartRate.ManufacturerInfo.SerialNumber, StringFormat='Serial Number: {0}'}"/>
                             </StackLayout>
                         </Border>
                         <Border>
                             <StackLayout>
-                                <Label Text="Product Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="Product Info" Style="{StaticResource HeaderLabelStyle}"/>
                                 <Label Text="{Binding HeartRate.ProductInfo.HardwareVersion, StringFormat='Hardware Version: {0}'}"/>
                                 <Label Text="{Binding HeartRate.ProductInfo.SoftwareVersion, StringFormat='Software Version: {0}'}"/>
                                 <Label Text="{Binding HeartRate.ProductInfo.ModelNumber, StringFormat='Model Number: {0}'}"/>
@@ -39,7 +39,7 @@
                         </Border>
                         <Border>
                             <StackLayout>
-                                <Label Text="Battery Status" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="Battery Status" Style="{StaticResource HeaderLabelStyle}"/>
                                 <Label Text="{Binding HeartRate.BatteryStatus.BatteryLevel, StringFormat='Battery Level: {0}'}"/>
                                 <Label Text="{Binding HeartRate.BatteryStatus.BatteryStatus, StringFormat='Battery Status: {0}'}"/>
                                 <Label Text="{Binding HeartRate.BatteryStatus.BatteryVoltage, StringFormat='Battery Voltage: {0:F1}'}"/>
@@ -52,7 +52,7 @@
                 <VerticalStackLayout>
                     <Border>
                         <StackLayout>
-                            <Label Text="Capabilities" FontAttributes="Bold" TextDecorations="Underline"/>
+                            <Label Text="Capabilities" Style="{StaticResource HeaderLabelStyle}"/>
                             <Label Text="{Binding HeartRate.Capabilities.Supported, StringFormat='Capabilities Supported: {0}'}"/>
                             <Label Text="{Binding HeartRate.Capabilities.Enabled, StringFormat='Capabilities Enabled: {0}'}"/>
                         </StackLayout>
@@ -60,7 +60,7 @@
 
                     <Border>
                         <StackLayout>
-                            <Label Text="Gym Mode" FontAttributes="Bold" TextDecorations="Underline"/>
+                            <Label Text="Gym Mode" Style="{StaticResource HeaderLabelStyle}"/>
                             <Grid ColumnDefinitions="Auto, Auto" ColumnSpacing="24">
                                 <HorizontalStackLayout>
                                     <CheckBox IsChecked="{Binding EnableGymMode}" IsEnabled="{Binding IsGymModeSupported}"/>
@@ -73,7 +73,7 @@
 
                     <Border>
                         <StackLayout RadioButtonGroup.GroupName="SportMode" RadioButtonGroup.SelectedValue="{Binding ModeRequested}">
-                            <Label Text="Sport Mode" FontAttributes="Bold" TextDecorations="Underline"/>
+                            <Label Text="Sport Mode" Style="{StaticResource HeaderLabelStyle}"/>
                             <Grid ColumnDefinitions="Auto, Auto" ColumnSpacing="24">
                                 <StackLayout>
                                     <RadioButton Content="Generic" Value="{x:Static ant:SportMode.Generic}"/>
